<resources>
    <string name="app_name">MindCache</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes_list">Notes</string>
    <string name="menu_change_password">Change password</string>
    <string name="menu_import_export">Import &amp; Export</string>
    <string name="error_loading_notes">Error loading notes</string>
    <string name="retry">retry</string>
    <string name="note_added_successfully">note added successfully</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Write something</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="menu_auth">Login</string>
    <string name="auth_successful">Auth success</string>
    <string name="input_password">Input your password</string>
    <string name="login_into_app">Login into app</string>
    <string name="confirm_delete_note">Confirm deleting a note</string>
    <string name="ask_delete_note">Delete note</string>
    <string name="icon_secret_note">🔒</string>
    <string name="menu_register">Register</string>
    <string name="password">password</string>
    <string name="msg_deleted">DELETED</string>
    <string name="msg_saved">SAVED</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="password_changed">Password changed successful</string>

    <string name="authentication_failed">Authentication failed (bad fingerprint)</string>
    <string name="error_not_authenticated">User not authenticated!!!</string>
    <string name="error_user_canceled">Authentication canceled by user</string>
    <string name="error_session_expired">Session expired, please authenticate again</string>
    <string name="error_biometry_failed">Biometric authentication failed</string>
    <string name="export_successful">Export successful</string>
    <string name="import_successful">Import successful</string>
    <string name="enter_current_password">Enter current login password to confirm the operation</string>
    <string name="import_confirmation">Confirmation</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select date</string>
    <string name="password_for_database_to_import">Password for database to import</string>
    <string name="select_option">Select option</string>
    <string name="option_2">Option 2</string>
</resources>