<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_auth" >

    <!-- Фрагмент авторизации -->
    <fragment
        android:id="@+id/nav_auth"
        android:name="com.myapp.mindcache.ui.auth.AuthFragment"
        android:label="AuthFragment">
        <action
            android:id="@+id/action_auth_to_notes_list"
            app:destination="@id/nav_notes_list"
            app:popUpTo="@id/nav_auth"
            app:popUpToInclusive="true"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_notes_list"
        android:name="com.myapp.mindcache.ui.notes.NoteListFragment"
        android:label="@string/menu_notes_list"
        tools:layout="@layout/fragment_notes_list" >
        <!-- Action для перехода на NoteDetailFragment -->
        <action
            android:id="@+id/action_list_to_note_detail"
            app:destination="@id/nav_note_detail" />
    </fragment>

    <!-- NoteDetailFragment -->
    <fragment
        android:id="@+id/nav_note_detail"
        android:name="com.myapp.mindcache.ui.notes.NoteDetailFragment"
        android:label="Note Detail"
        tools:layout="@layout/fragment_note_detail" >
        <!-- Объявляем аргумент -->
        <argument
            android:name="noteId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.myapp.mindcache.ui.auth.ChangePasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/nav_import_export"
        android:name="com.myapp.mindcache.ui.importexport.ImportExportFragment"
        android:label="@string/menu_import_export"
        tools:layout="@layout/fragment_import_export" />

    <action
        android:id="@+id/action_global_auth"
        app:destination="@id/nav_auth" />

</navigation>